--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -151,7 +151,7 @@
     {% if entry.type == 'article' %}
       {% capture entrytype %}<em>{{ entry.journal }}</em>{% endcapture %}
     {% elsif proceedings contains entry.type %}
-      {% capture entrytype %}<em>In {{ entry.booktitle }}</em>{% endcapture %}
+      {% capture entrytype %}<em>{{ entry.booktitle }}</em>{% endcapture %}
     {% elsif thesis contains entry.type %}
       {% capture entrytype %}<em>{{ entry.school }}</em>{% endcapture %}
     {% else %}
@@ -166,9 +166,6 @@
     {% if entry.location %}
       {% capture entrytype %}{{ entrytype }}{{ ", " }}{{ entry.location }}{% endcapture %}
     {% endif -%}
-    {% if entry.additional_info %}
-      {% capture entrytype %}{{ entrytype }}{{ entry.additional_info | markdownify | remove: '<p>' | remove: '</p>' }}{% endcapture %}
-    {% endif %}
     {% capture hook_exists %}{% file_exists _includes/hook/bib.liquid %}{% endcapture %}
     {% if hook_exists == 'true' %}
       {% include hook/bib.liquid %}
@@ -178,6 +175,11 @@
     <div class="periodical">
       {{ periodical | strip }}
     </div>
+    {% if entry.additional_info %}
+      <div class="periodical">
+        {{ entry.additional_info | markdownify | remove: '<p>' | remove: '</p>' }}
+      </div>
+    {% endif %}
     <div class="periodical">
       {{ entry.note | strip }}
     </div>
@@ -230,9 +232,6 @@
       {% if entry.blog %}
         <a href="{{ entry.blog }}" class="btn btn-sm z-depth-0" role="button">Blog</a>
       {% endif %}
-      {% if entry.code %}
-        <a href="{{ entry.code }}" class="btn btn-sm z-depth-0" role="button">Code</a>
-      {% endif %}
       {% if entry.poster %}
         {% if entry.poster contains '://' %}
           <a href="{{ entry.poster }}" class="btn btn-sm z-depth-0" role="button">Poster</a>
@@ -249,6 +248,20 @@
       {% endif %}
       {% if entry.website %}
         <a href="{{ entry.website }}" class="btn btn-sm z-depth-0" role="button">Website</a>
+      {% endif %}
+      {% if entry.code %}
+        <a href="{{ entry.code }}" class="btn btn-sm z-depth-0" role="button">Code</a>
+
+        {% if entry.code contains "github.com" %}
+          {% assign repo_path = entry.code | split: "github.com/" | last | split: "/" %}
+          {% assign owner = repo_path[0] %}
+          {% assign repo = repo_path[1] | replace: ".git", "" %}
+          <img
+            src="https://img.shields.io/github/stars/{{ owner }}/{{ repo }}?style=social"
+            alt="GitHub stars"
+            style="vertical-align: middle; margin-left: 6px;"
+          >
+        {% endif %}
       {% endif %}
     </div>
     {% if site.enable_publication_badges %}
