--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -50,3 +50,11 @@ $back-to-top-right: 30px;
 $back-to-top-diameter: 40px;
 $back-to-top-height: $back-to-top-diameter;
 $back-to-top-width: $back-to-top-diameter;
+
+// fonts
+$global-font-family: 'Lora', serif;
+
+$header-font-family: 'Playfair Display', serif;
+
+$global-font-weight: 400;
+$header-font-weight: 700;
